--- a/ExploreApp/Components/_Imports.razor
+++ b/ExploreApp/Components/_Imports.razor
@@ -9,3 +9,8 @@
 @using Microsoft.JSInterop
 @using ExploreApp
 @using ExploreApp.Components
+@using ExploreApp.NewFolder
+@using System.Text.Json
+@using ExploreApp.Interfaces
+@using ExploreApp.DTO.NearbySearchDTOs
+@using ExploreApp.DTO.TextSearchDTOs
