--- a/ExploreApp/Components/App.razor
+++ b/ExploreApp/Components/App.razor
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <HeadOutlet />
 </head>
 
