--- a/ExploreApp/Components/Pages/Home.razor
+++ b/ExploreApp/Components/Pages/Home.razor
@@ -24,9 +24,46 @@
 			}
 		</div>
 	</div>
+	<div class="groups picked-for-you">
+		<h1>Near you</h1>
+		<div class="box-container">
+			@for (int i = 0; i < 10; i++)
+			{
+				<div class="box">
+					<div class="image-container">
+						<img src="https://upload.wikimedia.org/wikipedia/commons/d/d1/Image_not_available.png" />
+					</div>
+					<div class="description">
+						<h6>
+							test
+						</h6>
+						<p>test</p>
+					</div>
+				</div>
+			}
+		</div>
+	</div>
+	<div class="groups picked-for-you">
+		<h1>Hot right now</h1>
+		<div class="box-container">
+			@for (int i = 0; i < 10; i++)
+			{
+				<div class="box">
+					<div class="image-container">
+						<img src="https://upload.wikimedia.org/wikipedia/commons/d/d1/Image_not_available.png" />
+					</div>
+					<div class="description">
+						<h6>
+							test
+						</h6>
+						<p>test</p>
+					</div>
+				</div>
+			}
+		</div>
+	</div>
 </section>
 <WhatsNow />
-
 
 @code {
 	public NearbySearchDTO nearbySearch { get; set; } = new();
