--- a/ExploreApp/Components/WhatsNow.razor
+++ b/ExploreApp/Components/WhatsNow.razor
@@ -1,6 +1,6 @@
 ﻿<div id="WhatsOpenNow">
-	<img src="Icons/Map_icon.png" />
-	<h6>What's open now?</h6>
+	<img src="Icons/chat_logo.png" />
+	<h6>Chat with us</h6>
 </div>
 
 @code {
