--- a/ExploreApp/Components/_Imports.razor
+++ b/ExploreApp/Components/_Imports.razor
@@ -14,3 +14,4 @@
 @using ExploreApp.Interfaces
 @using ExploreApp.DTO.NearbySearchDTOs
 @using ExploreApp.DTO.TextSearchDTOs
+@using Microsoft.Extensions.Caching.Memory
